fix overflow in body

--- a/f8-offline-day14/css/style.css
+++ b/f8-offline-day14/css/style.css
@@ -31,10 +31,6 @@ ul li {
   list-style: none;
 }
 
-body {
-  overflow: hidden;
-}
-
 .container {
   position: relative;
   max-width: 100vw;
